@@ -31,8 +31,8 @@
         "REPLICATED_DATA": "Replizierte Daten",
         "AVAILABLE_DATA": "Verfügbare Daten",
         "TOTAL_RECORDS": "Gesamte Datensätze",
-        "UNDERREPL_RECORDS": "Unterrepl. Datensätze",
-        "UNAVAIL_RECORDS": "Nicht verfüg. Datensätze",
+        "UNDERREPL_RECORDS": "Unterreplizierte Datensätze",
+        "UNAVAIL_RECORDS": "Nicht verfügbare Datensätze",
         "CLUSTER_LOAD": "Cluster Last",
         "CLUSTER_CHECKS": "Cluster Checks",
         "NODES_CHECKS": "Knoten Checks",
@@ -64,14 +64,14 @@
         "TITLE": "Tabellen",
         "NAME": "Name",
         "HEALTH": "Status",
-        "CONFIG_REPLICAS": "Konfig. Replika",
-        "CONFIG_SHARDS": "Konfig. Shards",
+        "CONFIG_REPLICAS": "Konfigurierte Replika",
+        "CONFIG_SHARDS": "Konfigurierte Shards",
         "STARTED_SHARDS": "Gestartete Shards",
         "MISSING_SHARDS": "Fehlende Shards",
-        "UNDERREPL_SHARDS": "Unterrepl. Shards",
+        "UNDERREPL_SHARDS": "Unterreplizierte Shards",
         "TOTAL": "Gesamt",
-        "UNAVAILABLE": "Nicht verfüg.",
-        "UNDERREPL": "Unterrepl.",
+        "UNAVAILABLE": "Nicht verfügbare",
+        "UNDERREPL": "Unterreplizierte",
         "SIZE": "Größe",
         "RECOVERY": "Wiederherstellung",
         "BLOBS": "Blobs",
@@ -85,10 +85,10 @@
             "CONF_SHARDS": "Konfig. Shards",
             "STARTED_SHARDS": "Gestartete Shards",
             "MISSING_SHARDS": "Fehlende Shards",
-            "UNDERREPL_SHARDS": "Unterrepl. Shards",
+            "UNDERREPL_SHARDS": "Unterreplizierte Shards",
             "TOTAL_RECORDS": "Gesamte Datensätze",
-            "UNAVAIL_RECORDS": "Nicht verfüg. Datensätze",
-            "UNDERREPL_RECORDS": "Unterrepl. Datensätze",
+            "UNAVAIL_RECORDS": "Nicht verfügbare Datensätze",
+            "UNDERREPL_RECORDS": "Unterreplizierte Datensätze",
             "SIZE": "Größe"
         },
         "SCHEMA": "Schema",
@@ -105,11 +105,12 @@
         "NOT_REACHABLE_MSG": "Der Cluster ist nicht erreichbar",
         "NAME": "Name",
         "NODES": "Knoten",
+        "OVERVIEW": "Überblick",
         "HEALTH": "Status",
         "HOSTNAME": "Hostname",
         "CRATE_VERSION": "CrateDB Version",
         "SNAPSHOT": "snapshot",
-        "REST_URL": "REST URL",
+        "HTTP_ENDPOINT": "HTTP Endpunkt",
         "CPU_USAGE": "Prozessorauslastung",
         "HEAP_USAGE": "Speicherauslastung (Heap)",
         "DISK_USAGE": "Festplattenauslastung",
